--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     position: relative;
     width: 300px;
     height: 400px;
-    background-color: aqua;
+    background-color: rgba(32, 190, 190, 0.733);
     border-radius: 10px;
     overflow: hidden;
 }
